--- a/style.css
+++ b/style.css
@@ -9,10 +9,8 @@ html {
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 1fr 5fr 1fr;
   height: 100%;
-  padding: 16px;
   box-sizing: border-box;
   display: grid;
-  gap: 15px;
 }
 
 .container div {
@@ -21,16 +19,18 @@ html {
   font-family: Helvetica;
   font-weight: bold;
   color: white;
-  border-radius: 15px;
 }
 
 .header {
-  background-color: #006157;
-  grid-column: 2 / span 2;
+  background-color: white;
+} 
+
+.container .header {
+  color: black;
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #1992d4;
   grid-row: 1 / span 2;
 }
 
