--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html {
 
 .container {
   text-align: center;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 5fr;
   height: 100%;
   box-sizing: border-box;
   display: grid;
@@ -24,6 +24,7 @@ html {
 .container .header {
   background-color: white;
   color: black;
+  box-shadow: 0px 15px 10px -15px #111
 }
 
 .sidebar {
