--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 }
 
 .sidebar {
-  background-color: #1992d4;
+  background-color: crimson;
   grid-row: 1 / span 2;
 }
 
@@ -57,4 +57,43 @@ h1 {
 	font-size: 30px;
 	margin-top: 0;
 	text-align: start;
+}
+
+.article p {
+	font-family: sans-serif;
+	color: rgb(0, 0, 0);
+	text-align: left;
+	grid-column: 1 / 3;
+	margin: 0;
+}
+
+.cards-heading > p {
+  margin-left: 1rem;
+}
+
+.article {
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+}
+
+.cards {
+	display: grid;
+	gap: 15px;
+	grid-template-columns: repeat(2, minmax(300px, 1fr));
+}
+
+.cards > .card {
+  background-color: white;
+  border-radius: 15px;
+  border-left: 5px solid black;
+  font-weight: normal;
+}
+
+.card p {
+  font-size: 15px;
+}
+
+.card .title {
+  font-size: 15px;
+  font-weight: bold;
 }
