--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@ html {
   margin: 0;
 }
 
+strong {
+  font-size: small;
+  color: black;
+}
+
+
+ul {
+	padding: 0;
+	list-style: none;
+	margin: 0;
+	text-align: start;
+}
+
 .container {
   text-align: center;
   grid-template-columns: 1fr 5fr;
@@ -11,6 +24,7 @@ html {
   height: 100%;
   box-sizing: border-box;
   display: grid;
+  grid-template-areas: '';
 }
 
 .container div {
@@ -46,9 +60,11 @@ html {
   font-family: sans-serif;
   color: rgb(0, 0, 0);
   text-align: left;
+  margin: 0;
 }
 
 .sidebar p {
+  color: white;
   font-size: 18px;
   text-align: start;
 }
@@ -57,14 +73,6 @@ h1 {
 	font-size: 30px;
 	margin-top: 0;
 	text-align: start;
-}
-
-.article p {
-	font-family: sans-serif;
-	color: rgb(0, 0, 0);
-	text-align: left;
-	grid-column: 1 / 3;
-	margin: 0;
 }
 
 .cards-heading > p {
@@ -87,13 +95,42 @@ h1 {
   border-radius: 15px;
   border-left: 5px solid black;
   font-weight: normal;
+  padding: 45px 25px 45px 25px;
+  box-shadow: 0px 10px 10px -12px #111;
 }
 
 .card p {
-  font-size: 15px;
+	font-size: 15px;
+	color: #636363;
 }
 
 .card .title {
   font-size: 15px;
   font-weight: bold;
+  color: black;
+}
+
+.rightbar {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+ 
+}
+
+.news-list {
+  border-radius: 15px;
+  background-color: white;
+	border-radius: 25px;
+	list-style: none;
+	margin: 0;
+  box-shadow: 0px 10px 10px -12px #111;
+}
+
+.news-list > ul > li > p {
+	font-size: small;
+	font-weight: normal;
+	color: #636363;
+}
+
+.news > p {
+	margin-left: 1rem;
 }
