--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h1 {
 
 .rightbar {
 	display: grid;
-	grid-template-rows: 1fr 1fr;
+	grid-template-rows: 1fr auto 1fr;
  
 }
 
@@ -120,7 +120,6 @@ h1 {
   border-radius: 15px;
   background-color: white;
 	border-radius: 25px;
-	list-style: none;
 	margin: 0;
   box-shadow: 0px 10px 10px -12px #111;
 }
@@ -133,4 +132,14 @@ h1 {
 
 .news > p {
 	margin-left: 1rem;
+}
+
+.trending {
+	background-color: white;
+	border-radius: 15px;
+  box-shadow: 0px 10px 10px -12px #111;
+}
+
+.rightbar > .trend-title {
+  margin: 15px 15px 15px 0
 }
