--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ h1 {
 .news-list {
   border-radius: 15px;
   background-color: white;
-	border-radius: 25px;
-	margin: 0;
+	border-radius: 15px;
+	margin: 0 0 .3em;
   box-shadow: 0px 10px 10px -12px #111;
 }
 
@@ -141,5 +141,5 @@ h1 {
 }
 
 .rightbar > .trend-title {
-  margin: 15px 15px 15px 0
+  margin: .9em .9em .9em 0
 }
