--- a/style.css
+++ b/style.css
@@ -46,10 +46,12 @@ p {
 }
 
 .container .header {
-  background-color: white;
-  color: black;
-  box-shadow: 0px 10px 10px -12px #111;
-  z-index: 1;
+  position: sticky;
+	background-color: white;
+	color: black;
+	box-shadow: 0px 10px 10px -12px #111;
+	z-index: 100;
+	top: 0;
 }
 
 .sidebar {
