--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p {
 }
 
 .sidebar {
-  background-color: crimson;
+  background-color: rgb(0, 0, 0);
   grid-row: 1 / span 2;
 }
 
@@ -147,12 +147,14 @@ h1 {
 }
 
 .cards > .card {
-  background-color: white;
-  border-radius: 15px;
-  border-left: 5px solid black;
-  font-weight: normal;
-  padding: 45px 25px 45px 25px;
-  box-shadow: 0px 10px 10px -12px #111;
+	background-color: white;
+	border-radius: 15px;
+	border-left: 5px solid rgb(151, 52, 52);
+	font-weight: normal;
+	padding: 45px 25px 45px 25px;
+	box-shadow: 0px 10px 10px -12px #111;
+	display: grid;
+	grid-template-rows: auto auto;
 }
 
 .card p {
@@ -227,5 +229,17 @@ ul li > .creator {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
+}
+
+#project-options {
+	display: flex;
+	justify-content: end;
+	gap: 2rem;
+	padding: 0;
+	margin-top: 2rem;
+}
+
+.project-option {
+	width: 1.8rem;
 }
 
