--- a/style.css
+++ b/style.css
@@ -243,3 +243,49 @@ ul li > .creator {
 	width: 1.8rem;
 }
 
+.header > .project-option {
+	grid-column: 1; /* Place the SVG in the first column */
+	grid-row: 1; /* Place the SVG in the first row */
+	width: 1.9rem;
+	align-self: center;
+}
+
+.container .header {
+	position: sticky;
+	background-color: white;
+	color: black;
+	box-shadow: 0px 10px 10px -12px #111;
+	z-index: 100;
+	top: 0;
+	display: grid;
+	padding: 30px;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto auto;
+	gap: 1em;
+}
+
+.search {
+	grid-row: 1;
+	display: inline-block;
+	width: clamp(8em, 80%, 25em);
+	background-color: #e2e8f0;
+	border-radius: 30px;
+	height: .5em;
+	align-self: center;
+}
+
+.header > .project-option:nth-child(2) {
+	grid-column: 3;
+}
+
+.header > img {
+	grid-row: 1;
+	grid-column: 4;
+}
+
+.header > strong {
+	grid-row: 1;
+	grid-column: 5;
+	align-self: center;
+	font-size: large;
+}
