--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@ html {
   margin: 0;
 }
 
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 strong {
   font-size: small;
   color: black;
@@ -55,8 +67,8 @@ p {
 }
 
 .sidebar {
-  background-color: rgb(0, 0, 0);
-  grid-row: 1 / span 2;
+	background-color: #1f2937;
+	grid-row: 1 / span 2;
 }
 
 .nav {
@@ -64,13 +76,15 @@ p {
 }
 
 .article {
-  background-color: #e2e8f0;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
 
 .article p {
   font-size: 18px;
   font-family: sans-serif;
-  color: rgb(0, 0, 0);
+  color: white;
   text-align: left;
   margin: 0;
 }
@@ -149,7 +163,7 @@ h1 {
 .cards > .card {
 	background-color: white;
 	border-radius: 15px;
-	border-left: 5px solid rgb(151, 52, 52);
+	border-left: 5px solid rgb(152, 3, 3);
 	font-weight: normal;
 	padding: 45px 25px 45px 25px;
 	box-shadow: 0px 10px 10px -12px #111;
@@ -270,17 +284,21 @@ ul li > .creator {
 	width: clamp(8em, 80%, 25em);
 	background-color: #e2e8f0;
 	border-radius: 30px;
-	height: .5em;
+	height: .3em;
 	align-self: center;
 }
 
 .header > .project-option:nth-child(2) {
+	margin: 0 auto;
 	grid-column: 3;
 }
 
-.header > img {
+
+.header img:first-of-type {
 	grid-row: 1;
 	grid-column: 4;
+	width: 2em;
+	height: 4rem;
 }
 
 .header > strong {
@@ -289,3 +307,32 @@ ul li > .creator {
 	align-self: center;
 	font-size: large;
 }
+
+#welcome-pic {
+	grid-row: 2;
+	width: 3em;
+	height: 6rem;
+	grid-column: 1 / 3;
+	margin-left: .5em;
+}
+
+
+.hello-ms {
+	display: grid;
+	grid-column: 2;
+	grid-row: 2;
+	align-content: center;
+	justify-items: start;
+	margin-left: 1.5em;
+}
+
+.hello-ms > p {
+	color: black;
+	font-size: 25px;
+	text-align: start;
+}
+
+.balloon > p {
+	font-size: medium;
+}
+
